fixup! fix(filter-drp): update spacing tokens and fix test

--- a/packages/components/src/LabelledMessage/LabelledMessage.module.scss
+++ b/packages/components/src/LabelledMessage/LabelledMessage.module.scss
@@ -6,5 +6,5 @@
 }
 
 .labelSeparator {
-  margin-inline-end: $spacing-xs;
+  margin-inline-end: $spacing-6;
 }
